# bevy_complex_repo

./: LICENSE  README.md  bevy_complex_repo.code-workspace  complex-repo.code-workspace
.github/workflows/: ci.yaml
app/: .gitignore  Cargo.toml  README.md
app/bins/cplx/: Cargo.toml
app/bins/cplx/src/: main.rs
app/bins/cplx_demo/: Cargo.toml
app/bins/cplx_demo/src/: main.rs
app/bins/cplx_teaser/examples/: how_to_teaser.rs
app/bins/cplx_teaser/src/: main.rs
app/bins/custom_web_folder/: Cargo.toml
app/bins/custom_web_folder/src/: main.rs
app/bins/custom_web_folder/web/: index.html
app/bins/custom_web_folder/web/js/: log.js
app/bins/no_std/: Cargo.toml
app/bins/rustflags/: Cargo.toml
app/libs/cplx_core/: Cargo.toml
book/: README.md
default_members/: Cargo.toml  README.md
main/: Cargo.toml
no_std/: Cargo.toml  README.md
no_std/src/: main.rs
resources/bevy_assets/: README.md
resources/web_assets/: README.md
testing/: Cargo.toml
testing/web_test/: Cargo.toml
testing/web_test/src/: main.rs
web_assets/: Cargo.toml
workspace/: Cargo.toml  README.md
workspace/bins/cplx/: Cargo.toml
workspace/bins/cplx/src/: main.rs
workspace/bins/cplx_demo/: Cargo.toml
workspace/bins/cplx_demo/src/: main.rs
workspace/bins/cplx_teaser/: Cargo.toml
workspace/bins/cplx_teaser/examples/: how_to_teaser.rs
workspace/bins/cplx_teaser/src/: main.rs
workspace/bins/custom_web_folder/src/: main.rs
workspace/bins/lint/: Cargo.toml
workspace/bins/lint/src/: main.rs
workspace/bins/package_asset_folder/: Cargo.toml
workspace/bins/package_asset_folder/src/: main.rs
workspace/bins/rustflags/.cargo/: config.toml
workspace/bins/rustflags/src/: main.rs
workspace/bins/wasm_opt/: Cargo.toml
workspace/bins/wasm_opt/src/: main.rs
workspace/libs/cplx_core/: Cargo.toml
