[package]
name = "no_std"
version = "0.1.0"
edition = "2024"

[package.metadata.bevy_cli.web]
target = "wasm32v1-none"
rustflags = ["--cfg", "getrandom_backend=\"wasm_js\""]

[dependencies]
bevy = { version = "0.16.0", default-features = false }
wasm-bindgen = { version = "0.2.100", default-features = false, features = [
  "msrv",
] }
wee_alloc = "0.4.5"

# Your web builds will start failing if you add a dependency that pulls in `getrandom` v0.3+.
# To fix this, you should tell `getrandom` to use the `wasm_js` backend on Wasm.
# See: <https://docs.rs/getrandom/0.3.3/getrandom/#webassembly-support>.
[target.wasm32v1-none.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
# In addition to enabling the `wasm_js` feature, you need to include `--cfg 'getrandom_backend="wasm_js"'`
# in your rustflags for both local and CI/CD web builds, taking into account that rustflags specified in
# multiple places are NOT combined (see <https://github.com/rust-lang/cargo/issues/5376>).
# Alternatively, you can opt out of the rustflags check with this patch:
#[patch.crates-io]
#getrandom = { git = "https://github.com/benfrankel/getrandom" }
